misc: fix forge messy lazy cleanup works though

--- a/common/src/main/resources/assets/more_beautiful_torches/lang/en_us.json
+++ b/common/src/main/resources/assets/more_beautiful_torches/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-    "itemGroup.morebeautifultorches": "More Beautiful Torches!",
+    "itemGroup.moreBeautifulTorches": "More Beautiful Torches!",
     "block.more_beautiful_torches.acacia_log_redstone_torch": "Acacia Log Redstone Torch",
     "block.more_beautiful_torches.acacia_log_soul_torch": "Acacia Log Soul Torch", 
     "block.more_beautiful_torches.acacia_log_torch": "Acacia Log Torch", 
